fixed overflow

--- a/main.css
+++ b/main.css
@@ -5,7 +5,6 @@
 
 
 body {
-    overflow: hidden;
     font-family: 'Times New Roman';
 
 }
@@ -15,13 +14,14 @@ a {
 }
 
 #textarea {
-    width: calc(100vw - 8vh);
-    height: calc(100vh - 4vh);
+    width: calc(100vw - 4em);
+    height: calc(100vh - 2em);
     font-size: 2em;
     color: black;
     padding-left: 1em;
-    padding-right: 1em;
+
     padding-top: 0em;
+    margin: none;
     border: none;
     outline: none;
     resize: none;
